<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_nama_peminjam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/nama"
        android:textColor="@android:color/black"
        android:textSize="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_0876545336"
        android:textSize="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/text_view_nama_peminjam" />

    <TextView
        android:id="@+id/text_view_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/deskripsi"
        android:textSize="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/text_view_nomor" />

    <TextView
        android:id="@+id/text_view_hutang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/borrow_rp5000_00"
        android:textColor="@android:color/holo_red_light"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_tanggal_pinjam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_tanggal_pinjam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/since"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_batas_tanggal"
        app:layout_constraintTop_toBottomOf="@+id/text_view_hutang" />

    <TextView
        android:id="@+id/text_view_batas_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/due_date"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tanggal_pinjam" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nama Peminjam  :"
        android:textColor="@android:color/black"
        android:textSize="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_nama_peminjam"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="No Telp                   :"
        android:textColor="@android:color/black"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Tujuan Utang         :"
        android:textColor="@android:color/black"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</android.support.constraint.ConstraintLayout>
